vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_if_condition.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_if_condition.vv:2:2: error: expression evaluated but not used
    1 | fn main() {
    2 |     '' == (if $embed_file(@FILE).path == '' {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    3 |         'a'
    4 |     } else {
