vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_if_condition.vv
fn main() {
	'' == (if $embed_file(@FILE).path == '' {
		'a'
	} else {
		'b'
	})
}
